	as the total infraction points dips below the tolerance level.
	* Added !eventuil, !notice, and !ticker commands.
	* !rate, !shutdown, and !who commands apply to the entire world rather than
	just the current game server.
	* Fixed NullPointerException when entering portals to maps not in the WZ
	files.
	* Fixed dropping equipped items not updating the avatar.

2012-12-08  GoldenKevin  (revision 182)

	* Fixed wrongful infractions and inability to start or complete quests with
	the GM jobs even though these actions are allowed by a clean client.
	* Implemented quests that change a skill level (i.e. fourth job skills
	quests that don't actually hand out skillbooks).
	* Implemented quest for gaining Ninja Ambush skill for Night Lords.
	* Fixed quests that allow a user to choose their item reward.
	* SQL procedures `updateranks` and `fetchranks` now skip accounts that are
	IP banned.
	* Fixed chair being displayed with players that were teleported while
	sitting on a chair item.
	* Added !clearinv command.
	* Fixed extraneous rows in `inventoryitems` database table when using !give
	on offline players.
	* Fixed SQLException when logging into a MAC banned character.

2012-12-08  GoldenKevin  (revision 183)

	* The map used for the quest for gaining the Ninja Ambush skill now can be
	exited.
	* Fixed Speed Pill, Sharp Eyes, and Poison crashing other players in map.
	* Fixed Sharp Eyes, Power Stance, and much more buff effects.
	* Fixed Slow and Poison player debuff effects.
	* Some pirate morph skills and morph items now work.
	* Fixed magic attack being buffed when a summon is spawned.
	* Any buff source (item or skill) that shares at least one of the same
	effects as a buff that has just been casted will be canceled.
	* Fixed false positive infractions when using Power Guard.

Copyright 2011-2012 GoldenKevin
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.