@@ -2525,7 +2525,7 @@
 	on offline players.
 	* Fixed SQLException when logging into a MAC banned character.
 
-2012-12-08  GoldenKevin  (revision 183)
+2012-12-14  GoldenKevin  (revision 183)
 
 	* The map used for the quest for gaining the Ninja Ambush skill now can be
 	exited.
@@ -2537,6 +2537,15 @@
 	* Any buff source (item or skill) that shares at least one of the same
 	effects as a buff that has just been casted will be canceled.
 	* Fixed false positive infractions when using Power Guard.
+
+2012-12-15  GoldenKevin  (revision 184)
+
+	* Refactored quest triggers in GameCharacter to reduce nesting and primitive
+	value (un)boxing. Removed redundant loop in itemCountChanged and fixed
+	missed call to completableQuests.remove(quest) in questStatusChanged.
+	* Refactored change quest status methods in GameCharacter to eliminate
+	instantiation and initialization (loop) of a temporary Map.
+	* A mob kill now advances the progress of a quest for everyone in the party.
 
 Copyright 2011-2012 GoldenKevin
 Copying and distribution of this file, with or without modification, are
